# network-diagnostics-report-tool-linux

./: .gitignore  Network Diagnostics Report Tool.desktop.example  Open_Network_Diagnostics_Report_Tool.sh  README.md  Setup_Prerequisites.sh  network_troubleshooting_gui_research.md  pyproject.toml  run.sh
docs/plans/: 2026-05-25-v0.1-implementation-plan.md
src/net_troubleshooter/: __main__.py
src/net_troubleshooter/core/: adapters.py  diagnosis.py  models.py  quick_check.py  redaction.py  reports.py  runner.py  website_check.py
src/net_troubleshooter/gui/: main_window.py  widgets.py
tests/: test_adapters.py  test_diagnosis.py  test_gui_reports.py  test_quick_check.py  test_reports.py  test_result_card.py  test_runner.py  test_website_check.py
