[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-diagnostics-report-tool"
version = "0.1.0"
description = "Linux-only read-only network diagnostics report GUI"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
network-diagnostics-report-tool = "net_troubleshooter.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
